Allow block sizes lower than 64 down to 1

--- a/pd/nw/dialog_prefs.html
+++ b/pd/nw/dialog_prefs.html
@@ -61,6 +61,12 @@
               <span data-i18n="prefs.audio.blocksize"></span>
               <select id="blocksize"
                       onchange="attr_change(this);">
+                <option value="1">1</option>
+                <option value="2">2</option>
+                <option value="4">4</option>
+                <option value="8">8</option>					  					  
+                <option value="16">16</option>
+                <option value="32">32</option>
                 <option value="64">64</option>
                 <option value="128">128</option>
                 <option value="256">256</option>
